removed unnecessary ellipsis and fixed a double horizontal scroll bug

--- a/src/app/shared/modules/scientific-metadata/metadata-view/metadata-view.component.scss
+++ b/src/app/shared/modules/scientific-metadata/metadata-view/metadata-view.component.scss
@@ -23,7 +23,6 @@
   display: flex;
   flex-direction: column;
   line-height: 1.3;
-  max-width: 230px;
   cursor: pointer;
 
   .metadata-human-name {
@@ -48,15 +47,6 @@
     text-overflow: ellipsis;
   }
 }
-
-::ng-deep metadata-name {
-  display: inline-block;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 230px;
-  cursor: pointer;
-  }
 
 mat-header-row {
   min-height: 36px;
